[package]
name = "galadon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.2", features = ["derive"] }
eyre = "0.6.8"
keyring = "2.0.2"
reqwest = { version = "0.11.16", features = ["serde_json", "json"] }
tokio = { version = "1.27.0", features = ["full"] }
