[package]
name = "horse-npc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-openai = "0.10.3"
clap = { version = "4.2.2", features = ["derive"] }
env_logger = "0.10.0"
eyre = "0.6.8"
keyring = "2.0.2"
log = { version = "0.4.17", features = ["serde"] }
reqwest = { version = "0.11.16", features = ["serde_json", "json"] }
rpassword = "7.2.0"
rusqlite = "0.29.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
serenity = { version = "0.11.5", default-features = false, features = [ "base64", "builder", "bytes", "cache", "chrono", "client", "command_attr", "dashmap", "flate2", "gateway", "http", "levenshtein", "model", "parking_lot", "rustls_backend", "static_assertions", "tokio", "typemap_rev", "utils", "uwl" ]}

tokio = { version = "1.27.0", features = ["full"] }
tokio-rusqlite = "0.4.0"
typed-builder = "0.14.0"
